# fastapi-simple-crud

./: helpers.py  main.py  pyproject.toml  requirements.txt
